# HealthChatbot

./: .gitignore  README.md
docs/: .~lock.Project Synopsis.doc#  .~lock.ProjectSynopsis.doc#  .~lock.StatusTracker.xls#  Design.doc  Design_Doc_Iteration4.txt  ProjectPlan.md  ProjectSynopsis.doc  Requirements.docx  StatusTracker.xlsx  TestPlan.xls  TestPlan.xlsx
src/: .gitignore  README.md  flake.nix
src/backend/: .env.example  README.md  patient_101.json  pyproject.toml  pytest.ini  requirements.txt
src/backend/app/: main.py
src/backend/app/cli/: cui_search.py  emr_retrieve.py  graph_expand.py
src/backend/app/routers/: chat.py  gdpr_router.py  sessions.py
src/backend/app/services/: chat_orchestrator.py  emr_loader.py  emr_summary.py  gemini_service.py  huggingface_service.py  llm_base.py  llm_factory.py  medgemma_service.py  ollama_service.py  presidio_anonymizer.py  rag_orchestrator.py  safety.py  sarvam_service.py  session_store.py  torch_runtime.py
src/backend/app/services/rag/: cui_search.py  embeddings.py  prompt.py
src/backend/data/: patient101.json  patient102.json
src/backend/scripts/: benchmark.py
src/backend/tests/: conftest.py  test_benchmark.py  test_context_compaction.py  test_emr_loader.py  test_emr_summary.py  test_gemini_service.py  test_ollama_service.py  test_pipeline.py  test_safety.py  test_sarvam_service.py  test_session_store.py
src/basicprototype/: local_app_with_gemma.py
src/frontend/: README.md  next.config.ts  package-lock.json  package.json
src/iteration1/: patient102.json  withgemini.py
src/iteration2/: .gitignore  (+1 more)
(+62 files in other folders)
